2001-06-01  Peter Williams  <peterw@ximian.com>

	* pixmaps/Makefile.am (gnome-stock-pixbufs.h): Add
	a $(srcdir) into the sed so we compile when builddir !=
	srcdir.

2001-06-01  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c
	(gnome_selector_client_get_selector): New function.

	* gnome-selector-component.c
	(activate_entry_handler): Removed, don't override this.
	(do_construct_handler): Hook into the selector's "history_changed" signal.

2001-06-01  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c
	(gnome_selector_client_get_entry_text, gnome_selector_client_set_entry_text):
	Removed, use the PropertyBag.

2001-06-01  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c
	(gnome_selector_client_check_uri): New function.
	(gnome_selector_client_scan_directory): New function.

2001-05-31  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c (WANT_PREVIEW_WIDGET): New property.

	* gnome-selector-component.[ch]: Derive from GnomeSelector, not
	GnomeFileSelector which is now a component.
	(GnomeSelectorComponentClass): Added "ensure_properties" signal.
	(PROP_PREVIEW_WIDGET, PROP_CONTROL_WIDGET): New properties.

2001-05-27  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-about.c: First run at porting it over to
	Pango. It is no longer themed by special widget names in GTKRC,
	instead, you modify the default font for the canvas widget in
	your GTKRC and it will use that. Colors and layout sizes are
	hardcoded for now. Only the title, the copyright and the
	description is displayed (i.e. the authors list is missing).

2001-05-25  Martin Baulig  <baulig@suse.de>

	* gnome-vfs-util.c (load_done): Use gnome_vfs_async_cancel() instead of
	gnome_vfs_async_close() on error.

2001-05-25  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c
	(gnome_selector_client_set_uri): New function.
	(gnome_selector_client_add_uri): New function.

2001-05-23  Martin Baulig  <baulig@suse.de>
