@@ -1,3 +1,8 @@
+2001-06-02  Martin Baulig  <baulig@suse.de>
+
+	* gnome-selector-client.h (GnomeSelectorClientClass):
+	Added "activate_entry" signal.
+
 2001-06-01  Peter Williams  <peterw@ximian.com>
 
 	* pixmaps/Makefile.am (gnome-stock-pixbufs.h): Add
